--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,5 +40,6 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3"
-  }
+  },
+  "packageManager": "bun@1.1.3"
 }
