fix: 環境変数を追加

--- a/.github/workflows/test-on-pr.yml
+++ b/.github/workflows/test-on-pr.yml
@@ -26,6 +26,8 @@ jobs:
           yarn install
 
       - name: Run tests
+        env:
+          PRIVATE_KEY: ${{ secrets.DEPLOYER_KEY }}
         run: |
           cd contract
           yarn test
