fix: git workflowのために修正

--- a/contract/.env.example
+++ b/contract/.env.example
@@ -1,14 +1,34 @@
-# Deployer secret address
+# Deployer secret address()
 DEPLOYER_KEY=""
 
 # Alchemy API Key
-SEPOLIA_ALCHEMY_KEY=""
-AMOY_ALCHEMY_KEY=""
+SEPOLIA_ALCHEMY_KEY="https://eth-sepolia.g.alchemy.com/v2/"
+AMOY_ALCHEMY_KEY="https://polygon-amoy.g.alchemy.com/v2/"
+BSC_TESTNET_ALCHEMY_KEY=""
+OPTIMISM_SEPOLIA_ALCHEMY_KEY="https://opt-sepolia.g.alchemy.com/v2/"
+ARBITRUM_SEPOLIA_ALCHEMY_KEY="https://arb-sepolia.g.alchemy.com/v2/"
+BASE_SEPOLIA_ALCHEMY_KEY="https://base-sepolia.g.alchemy.com/v2/"
 
 # RPC URL
-SEPOLIA_RPC_URL=""
-AMOY_RPC_URL=""
+SEPOLIA_RPC_URL="https://sepolia.infura.io/v3/"
+AMOY_RPC_URL="https://polygon-amoy.infura.io/v3/"
+BSC_TESTNET_RPC_URL="https://go.getblock.io/"
+OPTIMISM_SEPOLIA_RPC_URL="https://optimism-sepolia.infura.io/v3/"
+ARBITRUM_SEPOLIA_RPC_URL="https://arbitrum-sepolia.infura.io/v3/"
+BASE_SEPOLIA_RPC_URL=""
 
-# EXPLORER API
+# Explorer API
 ETHERSCAN_API_KEY=""
 POLYGONSCAN_API_KEY=""
+BSCSCAN_API_KEY=""
+OPTIMISMSCAN_API_KEY=""
+ARBITRUMSCAN_API_KEY=""
+BASESCAN_API_KEY=""
+
+# Explorer URL
+SEPOLIA_EXPLORER_URL="https://sepolia.etherscan.io/address"
+AMOY_EXPLORER_URL="https://amoy.polygonscan.com/address"
+BSC_TESTNET_EXPLORER_URL="https://testnet.bscscan.com/address"
+OPTIMISM_SEPOLIA_EXPLORER_URL="https://sepolia-optimism.etherscan.io/address"
+ARBITRUM_SEPOLIA_EXPLORER_URL="https://sepolia.arbiscan.io/address"
+BASE_SEPOLIA_EXPLORER_URL="https://sepolia.basescan.org/address"
