--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,10 @@
   "name": "backend",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun run --watch src/index.ts",
+    "start": "bun run src/index.ts"
+  },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@types/bun": "latest",
