--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,7 +6,13 @@
     "esModuleInterop": true,
     "strict": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": ".",
+    "baseUrl": ".",
+    "resolveJsonModule": true,
+    "paths": {
+      "@/*": ["src/*"],
+      "@contract/*": ["contract/*"]
+    }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "contract/**/*"]
 }
