--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,9 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=3000
+      - RELAYER_PRIVATE_KEY
     env_file:
-      - ./backend/.env
+      - ./backend/.env.local
 
 volumes:
   node_modules_frontend:
