fix: デプロイに向けて修正

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -5,17 +5,16 @@ RUN curl -fsSL https://bun.sh/install | bash
 ENV BUN_INSTALL="/root/.bun"
 ENV PATH="$BUN_INSTALL/bin:$PATH"
 
-WORKDIR /app
+WORKDIR /app/backend
 
 COPY package.json bun.lockb ./
-COPY contract ../contract
 
 RUN bun install
 
 COPY . .
 
-EXPOSE 8080
+EXPOSE 3000
 
-ENV NODE_ENV=production
+ENV NODE_ENV=development
 
-CMD ["bun", "run", "start"]
+CMD ["bun", "run", "dev"]
