--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -17,7 +17,11 @@ jobs:
 
       - name: Generate deployment package
         run: |
-          zip -r deploy.zip . -x '*.git*'
+          mkdir deploy
+          cp -r backend/* deploy/
+          cp -r contract/* deploy/
+          cd deploy
+          zip -r ../deploy.zip . -x '*.git*'
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
