--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -17,11 +17,11 @@ jobs:
 
       - name: Generate deployment package
         run: |
-          mkdir deploy
-          cp -r backend/* deploy/
-          cp -r contract/* deploy/
+          mkdir -p deploy/backend
+          cp -r backend/* deploy/backend/
+          cp -r contract deploy/
           cd deploy
-          zip -r ../deploy.zip . -x '*.git*'
+          zip -r ../deploy.zip .
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
