--- a/backend/.ebextensions/01_envar.config
+++ b/backend/.ebextensions/01_envar.config
@@ -2,3 +2,7 @@ option_settings:
   aws:elasticbeanstalk:application:environment:
     PORT: 8080
     NODE_ENV: production
+  aws:elasticbeanstalk:environment:proxy:
+    ProxyServer: nginx
+  aws:elasticbeanstalk:container:docker:
+    Dockerfile: Dockerfile
