--- a/backend/.ebextensions/01_envar.config
+++ b/backend/.ebextensions/01_envar.config
@@ -5,4 +5,4 @@ option_settings:
   aws:elasticbeanstalk:environment:proxy:
     ProxyServer: nginx
   aws:elasticbeanstalk:container:docker:
-    Dockerfile: Dockerfile
+    Dockerfile: backend/Dockerfile
