--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           mkdir -p deploy
           cp -r backend/* deploy/
-          cp -r contract deploy/
+          cp -r contract/* deploy/
           cd deploy
           zip -r ../deploy.zip .
 
