--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "bun run --watch src/index.ts",
     "start": "bun run src/index.ts",
-    "build": "bun build src/index.ts --outdir=dist"
+    "build": "bun build src/index.ts --outdir=dist --target=node"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
