--- a/backend/package.json
+++ b/backend/package.json
@@ -3,18 +3,13 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
-    "start": "bun run src/index.ts",
-    "build": "bun build src/index.ts --outdir=dist --target=node"
+    "dev": "ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.3",
-    "@types/bun": "latest",
     "@types/node": "^22.5.0",
     "typescript": "^5.5.4"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
   },
   "dependencies": {
     "@hono/node-server": "^1.12.1",
