fix: ローカルも変更

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,15 +1,10 @@
 FROM node:20
 
-RUN curl -fsSL https://bun.sh/install | bash
-
-ENV BUN_INSTALL="/root/.bun"
-ENV PATH="$BUN_INSTALL/bin:$PATH"
-
 WORKDIR /app/backend
 
 COPY package.json bun.lockb ./
 
-RUN bun install
+RUN npm install
 
 COPY . .
 
@@ -17,4 +12,4 @@ EXPOSE 3000
 
 ENV NODE_ENV=development
 
-CMD ["bun", "run", "dev"]
+CMD ["npm", "run", "dev"]
