--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --watch src/index.ts",
-    "start": "bun run src/index.ts",
-    "build": "bun build src/index.ts --outdir=dist"
+    "start": "bun run src/index.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
