--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,10 +1,15 @@
 FROM node:20
 
+RUN curl -fsSL https://bun.sh/install | bash
+
+ENV BUN_INSTALL="/root/.bun"
+ENV PATH="$BUN_INSTALL/bin:$PATH"
+
 WORKDIR /app/backend
 
 COPY package.json bun.lockb ./
 
-RUN npm install
+RUN bun install
 
 COPY . .
 
@@ -12,4 +17,4 @@ EXPOSE 3000
 
 ENV NODE_ENV=development
 
-CMD ["npm", "run", "dev"]
+CMD ["bun", "run", "dev"]
